# Efficient-Sampling

./: .gitignore  CITATION.cff  README.md  REPRODUCING.md  pyproject.toml  test_md.sh  test_tableI.sh  test_tableII.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
activelearn/: _hyperopt.py  _hyperopt2.py  _hyperopt2b.py  _mlearn.py  _mlearn2b.py  _model.py  _prep.py  _workflow.py  active_sampling.ipynb  cost.pkl  dca.py  hist.pkl  objective.py  perlin_nick.py  score.txt  size.pkl  test.py
activelearn/.ipynb_checkpoints/: active_sampling-checkpoint.ipynb
code/: LICENSE  README.md  README.md.orig  run  test_eos.sh  test_md.sh  test_tableI.sh  test_tableII.sh
code/tableII/: README.txt
docs/: RELEASE.md
environment/: Dockerfile
metadata/: metadata.yml
results/Skyrme/: cost.pkl  eos_plotter.py  prep.py  sampler.py  score.txt
scripts/: install_lammps.sh
src/: _hyperopt_plot.py  active_sampling.ipynb  plot_func.py  plotter.py
src/.ipynb_checkpoints/: active_sampling-checkpoint.ipynb
src/efficient_sampling/: __init__.py  cli.py
tableI/: README.txt
tableII/: .README.txt.swp
test_viscosity/: _estimator.py  _hyperopt.py  _hyperopt2.py  _hyperopt2b.py  _hyperopt_plot.py  _mlearn.py  _mlearn2b.py  _model.py  _potatoe.py  _prep.py  _viscosity.py  _workflow.py  dataset.py  interpf.py  interpolator.py  pkl2df2db.py  plotter.py  potatoe.py  sampler.py
tests/: test_cli.py
tests/rdf/: rdf.py
tests/transport/: _viscosity.py
(+82664 files in other folders)
