[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient-sampling"
version = "0.1.0"
description = "Utilities and launchers for the Efficient Sampling research workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Abdourahmane Diaw"},
]
keywords = ["surrogate-modeling", "active-learning", "scientific-computing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
runtime = [
  "dill",
  "klepto",
  "matplotlib",
  "multiprocess",
  "mystic",
  "numpy",
  "scikit-learn",
  "scipy",
]
eos = [
  "torch",
]

[project.scripts]
efficient-sampling = "efficient_sampling.cli:main"

[project.urls]
Paper = "https://doi.org/10.1038/s42256-024-00839-1"
Repository = "https://github.com/abdoudiaw/Efficient-Sampling"
Data = "https://doi.org/10.5281/zenodo.10908462"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
